--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       border-bottom: 2px solid var(--primary-color);
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 1001;
     }
     header .logo img { max-height: 60px; }
     header h1 {
@@ -59,8 +59,8 @@
       justify-content: center;
       padding: 0.5rem 0;
       position: sticky;
-      top: 70px;
-      z-index: 999;
+      top: 0;
+      z-index: 1000;
     }
     .nav-links {
       display: flex;
@@ -126,7 +126,6 @@
       box-shadow: 0 3px 6px var(--shadow);
       transition: background 0.3s;
       cursor: pointer;
-      border: none;
     }
     .button:hover, .button:focus { background: var(--button-hover); }
 
@@ -177,7 +176,8 @@
 
   <!-- Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- Tally JS -->
+
+  <!-- Tally JS for popup -->
   <script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body>
@@ -206,59 +206,35 @@
     <button id="toggle-text">Toggle Larger Text</button>
   </div>
 
-  <!-- Updated button to open Tally modal -->
+  <!-- Add Post Button triggers Tally modal -->
   <button class="button"
-          data-tally-open="w7AQdP"
-          data-tally-layout="modal"
-          data-tally-hide-title="1"
-          data-tally-auto-close="3000"
-          data-tally-form-events-forwarding="1">
+    data-tally-open="w7AQdP"
+    data-tally-layout="modal"
+    data-tally-hide-title="1"
+    data-tally-auto-close="3000"
+    data-tally-form-events-forwarding="1">
     Add a Post
   </button>
 
   <!-- SECTIONS WITH CATEGORY CARDS -->
   <div class="section" id="prayers">
     <h2>Prayer Requests</h2>
-    <div class="card-container">
-      <div class="card prayer">
-        <h3>Prayer Request</h3>
-        <p>Please pray for my neighbor’s surgery next week.</p>
-        <small>– Mary</small>
-      </div>
-    </div>
+    <div class="card-container"></div>
   </div>
 
   <div class="section" id="provisions">
     <h2>Provisions Needed</h2>
-    <div class="card-container">
-      <div class="card provision">
-        <h3>Provision Needed</h3>
-        <p>Looking for canned goods for a family in need.</p>
-        <small>– Sarah</small>
-      </div>
-    </div>
+    <div class="card-container"></div>
   </div>
 
   <div class="section" id="events">
     <h2>Events</h2>
-    <div class="card-container">
-      <div class="card event">
-        <h3>Event</h3>
-        <p>Women’s Bible Study – Wednesday at 6pm.</p>
-        <small>– Group Leader</small>
-      </div>
-    </div>
+    <div class="card-container"></div>
   </div>
 
   <div class="section" id="updates">
     <h2>Updates</h2>
-    <div class="card-container">
-      <div class="card update">
-        <h3>Update</h3>
-        <p>Thank you for donations for the food drive!</p>
-        <small>– Outreach Committee</small>
-      </div>
-    </div>
+    <div class="card-container"></div>
   </div>
 
   <footer>
@@ -332,6 +308,14 @@
     }
 
     loadPosts();
+
+    // --- REAL-TIME UPDATES ---
+    supabase
+      .channel('public:Submissions')
+      .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'Submissions' }, payload => {
+        renderPost(payload.new);
+      })
+      .subscribe();
   </script>
 </body>
 </html>
