--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First Love Church: Women’s Group Bulletin Board</title>
+
+  <!-- Tally Embed -->
+  <script async src="https://tally.so/widgets/embed.js"></script>
+
   <style>
     /* COLORS */
     :root {
@@ -43,14 +47,10 @@
       border-bottom: 2px solid var(--primary-color);
       position: sticky;
       top: 0;
-      z-index: 1001;
+      z-index: 1000;
     }
     header .logo img { max-height: 60px; }
-    header h1 {
-      font-size: 1.6rem;
-      color: var(--secondary-color);
-      margin-left: 1rem;
-    }
+    header h1 { font-size: 1.6rem; color: var(--secondary-color); margin-left: 1rem; }
 
     /* NAVIGATION */
     nav {
@@ -59,45 +59,27 @@
       justify-content: center;
       padding: 0.5rem 0;
       position: sticky;
-      top: 0;
-      z-index: 1000;
+      top: 80px; /* under header */
+      z-index: 999;
     }
     .nav-links {
       display: flex;
       gap: 2rem;
       list-style: none;
     }
-    .nav-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    .nav-links a:hover,
-    .nav-links a:focus { text-decoration: underline; }
+    .nav-links a { color: white; text-decoration: none; font-weight: 600; }
+    .nav-links a:hover, .nav-links a:focus { text-decoration: underline; }
 
     /* HAMBURGER */
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-      position: absolute;
-      right: 1rem;
-    }
-    .hamburger span {
-      height: 3px;
-      width: 25px;
-      background: white;
-      margin: 4px 0;
-      border-radius: 2px;
-    }
-
+    .hamburger { display: none; flex-direction: column; cursor: pointer; position: absolute; right: 1rem; }
+    .hamburger span { height: 3px; width: 25px; background: white; margin: 4px 0; border-radius: 2px; }
     @media (max-width: 768px) {
       .nav-links { display: none; flex-direction: column; background: var(--primary-color); position: absolute; top: 100%; right: 0; width: 200px; padding: 1rem; }
       .nav-links.show { display: flex; }
       .hamburger { display: flex; }
     }
 
-    /* ACCESSIBILITY CONTROLS */
+    /* CONTROLS */
     .controls { text-align: center; margin: 1rem; display: flex; justify-content: center; gap: 0.5rem; flex-wrap: wrap; }
     .controls button {
       background: var(--button-bg);
@@ -125,7 +107,6 @@
       max-width: 300px;
       box-shadow: 0 3px 6px var(--shadow);
       transition: background 0.3s;
-      cursor: pointer;
     }
     .button:hover, .button:focus { background: var(--button-hover); }
 
@@ -176,11 +157,9 @@
 
   <!-- Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-  <!-- Tally JS for popup -->
-  <script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body>
+
   <header>
     <div class="logo">
       <img src="https://raw.githubusercontent.com/Aram814/First_Love_Church/refs/heads/main/first-love-logo-2017.png" alt="First Love Church Logo">
@@ -206,7 +185,7 @@
     <button id="toggle-text">Toggle Larger Text</button>
   </div>
 
-  <!-- Add Post Button triggers Tally modal -->
+  <!-- Tally Button -->
   <button class="button"
     data-tally-open="w7AQdP"
     data-tally-layout="modal"
@@ -216,68 +195,21 @@
     Add a Post
   </button>
 
-  <!-- SECTIONS WITH CATEGORY CARDS -->
-  <div class="section" id="prayers">
-    <h2>Prayer Requests</h2>
-    <div class="card-container"></div>
-  </div>
+  <!-- SECTIONS -->
+  <div class="section" id="prayers"><h2>Prayer Requests</h2><div class="card-container"></div></div>
+  <div class="section" id="provisions"><h2>Provisions Needed</h2><div class="card-container"></div></div>
+  <div class="section" id="events"><h2>Events</h2><div class="card-container"></div></div>
+  <div class="section" id="updates"><h2>Updates</h2><div class="card-container"></div></div>
 
-  <div class="section" id="provisions">
-    <h2>Provisions Needed</h2>
-    <div class="card-container"></div>
-  </div>
-
-  <div class="section" id="events">
-    <h2>Events</h2>
-    <div class="card-container"></div>
-  </div>
-
-  <div class="section" id="updates">
-    <h2>Updates</h2>
-    <div class="card-container"></div>
-  </div>
-
-  <footer>
-    &copy; First Love Church – Women’s Group
-  </footer>
+  <footer>&copy; First Love Church – Women’s Group</footer>
 
   <script>
-    // Hamburger Menu
-    const hamburger = document.querySelector(".hamburger");
-    const navLinks = document.querySelector(".nav-links");
-    hamburger.addEventListener("click", () => {
-      const expanded = hamburger.getAttribute("aria-expanded") === "true" || false;
-      hamburger.setAttribute("aria-expanded", !expanded);
-      navLinks.classList.toggle("show");
-    });
-
-    // Restore Preferences
-    if (localStorage.getItem('darkMode') === 'true') document.body.classList.add('dark');
-    if (localStorage.getItem('largeText') === 'true') document.body.classList.add('large-text');
-
-    // Dark Mode Toggle
-    document.getElementById('toggle-dark').addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-      localStorage.setItem('darkMode', document.body.classList.contains('dark'));
-    });
-
-    // Large Text Toggle
-    document.getElementById('toggle-text').addEventListener('click', () => {
-      document.body.classList.toggle('large-text');
-      localStorage.setItem('largeText', document.body.classList.contains('large-text'));
-    });
-
     // --- Supabase Setup ---
     const supabaseUrl = "https://btercxzikklbkjpltoey.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ0ZXJjeHppa2tsYmtqcGx0b2V5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYwMDU5NjksImV4cCI6MjA3MTU4MTk2OX0.o0iUcb89y0TaN2-ze0cEFxljCt-tsZmbrZDl8NnEGfc";
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    const categoryMap = {
-      "Prayer":"prayers",
-      "Provision":"provisions",
-      "Event":"events",
-      "Other Update":"updates"
-    };
+    const categoryMap = { "Prayer":"prayers", "Provision":"provisions", "Event":"events", "Other Update":"updates" };
 
     function renderPost(post) {
       const sectionId = categoryMap[post.Category];
@@ -290,13 +222,14 @@
       let html = `<h3>${post['Title/Subject']}</h3>`;
       html += `<p>${post['Details/Description']}</p>`;
       if(post['Event Date'] && sectionId==='events') 
-          html += `<small>Date: ${new Date(post['Event Date']).toLocaleDateString()}</small><br>`;
+        html += `<small>Date: ${new Date(post['Event Date']).toLocaleDateString()}</small><br>`;
       if(post['Name (Optional)']) html += `<small>– ${post['Name (Optional)']}</small>`;
       if(post['Contact Info (Optional)']) html += `<br><small>Contact: ${post['Contact Info (Optional)']}</small>`;
       card.innerHTML = html;
       container.prepend(card);
     }
 
+    // Load existing posts
     async function loadPosts() {
       const { data: posts, error } = await supabase
         .from('Submissions')
@@ -307,15 +240,37 @@
       posts.forEach(post => renderPost(post));
     }
 
-    loadPosts();
-
-    // --- REAL-TIME UPDATES ---
-    supabase
-      .channel('public:Submissions')
+    // Real-time updates
+    supabase.channel('public:Submissions')
       .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'Submissions' }, payload => {
         renderPost(payload.new);
       })
       .subscribe();
+
+    loadPosts();
+
+    // Hamburger menu
+    const hamburger = document.querySelector(".hamburger");
+    const navLinks = document.querySelector(".nav-links");
+    hamburger.addEventListener("click", () => {
+      const expanded = hamburger.getAttribute("aria-expanded") === "true" || false;
+      hamburger.setAttribute("aria-expanded", !expanded);
+      navLinks.classList.toggle("show");
+    });
+
+    // Dark/large text toggles
+    if (localStorage.getItem('darkMode') === 'true') document.body.classList.add('dark');
+    if (localStorage.getItem('largeText') === 'true') document.body.classList.add('large-text');
+
+    document.getElementById('toggle-dark').addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+      localStorage.setItem('darkMode', document.body.classList.contains('dark'));
+    });
+
+    document.getElementById('toggle-text').addEventListener('click', () => {
+      document.body.classList.toggle('large-text');
+      localStorage.setItem('largeText', document.body.classList.contains('large-text'));
+    });
   </script>
 </body>
 </html>
