--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
 
               {/* Footer */}
               <footer className="w-full text-center p-4 mt-8" style={{ backgroundColor: tailwindColors['footer-color'], color: 'white' }}>
-                <p className="text-sm">&copy; 2024 Women's Fellowship. All rights reserved.</p>
-                <p className="text-xs mt-1">User ID: {localUserId}</p>
+                <p className="text-sm">&copy; 2025 Women's Fellowship.</p>
+                <p className="text-sm">&copy; 2000 First Love Church. All rights reserved.</p>
               </footer>
 
               {/* Post Submission Modal */}
